--- a/style.css
+++ b/style.css
@@ -2,15 +2,53 @@
 
 body{
     font-family: poppins ;
+    margin: 0;
+    padding: 0;
+
+}
+
+.header{
     background-image: url(./img/Restaurant.png);
     background-size: cover;
     background-repeat: no-repeat;
-
+    height: 20vh;
+    
 }
 
 .h1{
     font-size: 22px;
     font-family: Neue Montreal;
     font-weight: bold;
+    display: flex;
+    margin-left: 20px;
+    margin-top: 20px;
 
+}
+
+.h2{
+    font-size: 18px;
+    font-family: Neue Montreal;
+    font-weight: regular;
+    margin-left: 20px;
+    margin-top: 30px;
+}
+
+.menu{
+    background-image: url(./img/Menu1.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 119px;
+    width: 165px;
+    margin-left: 20px;
+    margin-top: 20px;
+
+}
+
+.text{
+    border-radius: 50%;
+    border-color: #0BAB5E;
+    border-width: 100px;
+    font-size: 16px;
+    font-family: Neue Montreal;
+    
 }
